--- a/src/app.css
+++ b/src/app.css
@@ -1,7 +1,10 @@
 
-        .map {
-          display: block;
-          height: 100%;
-          width: 100%;
-          border: 1px solid #AAA;
-        }
+.map {
+ 	position: absolute;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    width: 100%;
+    height: 100%;
+    }
