--- a/src/app.css
+++ b/src/app.css
@@ -1,10 +1,7 @@
 
-.map {
- 	position: absolute;
-    left: 0;
-    right: 0;
-    top: 0;
-    bottom: 0;
-    width: 100%;
-    height: 100%;
-    }
+  .map {
+  	position:absolute;
+  	top:0;
+  	bottom:0;
+  	width: 1800px;
+  	height:100%; }
