--- a/src/app.css
+++ b/src/app.css
@@ -1,9 +1,120 @@
 
-  .map {
+.map {
   	position:absolute;
   	top:0;
   	bottom:0;
   	width: 100%;
   	height:100%;
-  	 }
+}
+
+a {
+  text-decoration: none;
+  color: #000000;
+  padding: 0;
+}
+  
+a:hover, a:active {
+  background-color: #000000;
+  color: #FFFFFF;
+    }
+
+.dropdownitem {
+  padding-right: 12px;
+  background-color:#B3B3B3;
+}
+
+.dropdownitem:hover {
+  background-color: #000000;	
+}
+.header {
+  display: block;
+  background-color:#B3B3B3;
+  opacity: 0.6;
+  width: 100%;
+ 
+
+}
+
+.list {
+  padding: 0;
+  list-style-type: none;
+  margin: 0;
+  width: 100%;
+  display: table;
+  border-collapse: collapse;
+  border: none;
+  
+  }
+  
+.link {
+ display: block; 
+ margin: none;
+ font-weight: bold;
+ color: #000000;
+ background-color: #B3B3B3;
+ text-align: center;
+ padding: 8px;
+ text-decoration: none;
+ text-transform: uppercase;
+}
+
+.listitem {
+  float: right;
+  font: 12px sans-serif;
+  display: block;
+  position: relative;
+  padding: 10px 12px;
+  cursor: pointer;
+  -webkit-transition: all 0.2s;
+  -moz-transition: all 0.2s;
+  -ms-transition: all 0.2s;
+  -o-transition: all 0.2s;
+  transition: all 0.2s;
+}
+
+ul li {
+font:  12px sans-serif;
+}
+
+
+ul li ul {
+  padding: 0;
+  position: absolute;
+  top: 48px;
+  left: 0;
+  width: 150px;
+  -webkit-box-shadow: none;
+  -moz-box-shadow: none;
+  box-shadow: none;
+  display: none;
+  opacity: 0;
+  visibility: hidden;
+  -webkit-transiton: opacity 0.2s;
+  -moz-transition: opacity 0.2s;
+  -ms-transition: opacity 0.2s;
+  -o-transition: opacity 0.2s;
+  -transition: opacity 0.2s;
+}
+
+ul li ul li { 
+  background: #555; 
+  display: block; 
+  color: #fff;
+  text-shadow: 0 -1px 0 #000;
+}
+
+  
+ul li:hover ul {
+  display: block;
+  opacity: 1;
+  visibility: visible;
+}
+
+.title {
+  text-align: center;
+}  
+  
+
+
+
 
