--- a/src/mapstyles.css
+++ b/src/mapstyles.css
@@ -22,7 +22,8 @@ a:hover, a:active {
   display: block;
   background: #7E8F7C;
   opacity: 0.6;
-  width: 100%;
+  width: 20%;
+  float: right;
  
 
 }
